--- a/Numerics/NumericsTests/NumericsTests.csproj
+++ b/Numerics/NumericsTests/NumericsTests.csproj
@@ -51,6 +51,7 @@
     <Compile Include="ComplexNumberTests.cs" />
     <Compile Include="NumericsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VectorTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
