--- a/Numerics/Numerics/CSharpNumerics.csproj
+++ b/Numerics/Numerics/CSharpNumerics.csproj
@@ -11,6 +11,7 @@
     <RepositoryUrl>https://github.com/backlundtransform/CSharpNumerics</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <PackageTags>Numerics,Statistics</PackageTags>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <ItemGroup>
