--- a/Numerics/NumericsTests/NumericsTests.csproj
+++ b/Numerics/NumericsTests/NumericsTests.csproj
@@ -52,6 +52,7 @@
     <Compile Include="ComplexNumberTests.cs" />
     <Compile Include="DifferentialEquationTest.cs" />
     <Compile Include="MatrixTest.cs" />
+    <Compile Include="CalculusTests.cs" />
     <Compile Include="NumericsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StatisticsTest.cs" />
