--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -19,17 +19,16 @@ jobs:
           dotnet-version: '10.0.x'
 
       - name: Restore
-        run: dotnet restore "CSharpNumerics/Numerics/Numerics/CSharpNumerics.csproj"
+        run: dotnet restore "Numerics/Numerics/CSharpNumerics.csproj"
 
       - name: Build
-        run: dotnet build "CSharpNumerics/Numerics/Numerics/CSharpNumerics.csproj" -c Release --no-restore
+        run: dotnet build "Numerics/Numerics/CSharpNumerics.csproj" -c Release --no-restore
 
       - name: Pack
-        run: dotnet pack "CSharpNumerics/Numerics/Numerics/CSharpNumerics.csproj" -c Release --no-build -o out
+        run: dotnet pack "Numerics/Numerics/CSharpNumerics.csproj" -c Release --no-build -o out
 
       - name: Publish to NuGet.org
-        run: |
-          dotnet nuget push "out/*.nupkg" \
-            --api-key ${{ secrets.NUGET_API_KEY }} \
-            --source https://api.nuget.org/v3/index.json \
-            --skip-duplicate
+        run: dotnet nuget push "out/*.nupkg" \
+             --api-key ${{ secrets.NUGET_API_KEY }} \
+             --source https://api.nuget.org/v3/index.json \
+             --skip-duplicate
