--- a/Numerics/Numerics/CSharpNumerics.csproj
+++ b/Numerics/Numerics/CSharpNumerics.csproj
@@ -3,14 +3,14 @@
 		<TargetFramework>net10.0</TargetFramework>
 		<OutputType>Library</OutputType>
 		<Authors>Göran Bäcklund</Authors>
-		<Company>ExoplanetHunter</Company>
+		<Company>Backlundtransform</Company>
 		<Description>Numeric package</Description>
 		<PackageProjectUrl>https://github.com/backlundtransform/CSharpNumerics</PackageProjectUrl>
 		<PackageLicenseFile>license.txt</PackageLicenseFile>
 		<RepositoryUrl>https://github.com/backlundtransform/CSharpNumerics</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
 		<PackageTags>Numerics,Statistics</PackageTags>
-		<Version>1.1.0</Version>
+		<Version>2.0.1</Version>
 	</PropertyGroup>
 
 	<ItemGroup>
