--- a/Numerics/NumericTest/NumericTest.csproj
+++ b/Numerics/NumericTest/NumericTest.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.8" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.8" />
     <PackageReference Include="coverlet.collector" Version="3.1.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="System.Drawing.Common" Version="6.0.0" />
     <PackageReference Include="xunit.extensibility.execution" Version="2.4.2" />
   </ItemGroup>
