--- a/Numerics/Numerics/CSharpNumerics.csproj
+++ b/Numerics/Numerics/CSharpNumerics.csproj
@@ -9,8 +9,8 @@
 		<PackageLicenseFile>LICENSE</PackageLicenseFile>
 		<RepositoryUrl>https://github.com/backlundtransform/CSharpNumerics</RepositoryUrl>
 		<RepositoryType>git</RepositoryType>
-		<PackageTags>Numerics,Statistics,ML,Physics,Math,Calculus,Matrix,Vector,FFT,Interpolation,ODE,Regression,Classification,CrossValidation,Astronomy,Kinematics,Dynamics,Integration,Tensor</PackageTags>
-		<Version>2.2.4</Version>
+		<PackageTags>Numerics,Statistics,ML,Physics,Math,Calculus,Matrix,Vector,FFT,Interpolation,ODE,Regression,Classification,CrossValidation,Astronomy,Kinematics,Dynamics,Integration,Tensor, GamePhysics</PackageTags>
+		<Version>2.2.5</Version>
 		<PackageIcon>logo.png</PackageIcon>
 	</PropertyGroup>
 
