--- a/Numerics/Numerics/CSharpNumerics.csproj
+++ b/Numerics/Numerics/CSharpNumerics.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
-		<TargetFramework>net10.0</TargetFramework>
+		<TargetFrameworks>net10.0;net8.0;netstandard2.1</TargetFrameworks>
+		<LangVersion>latest</LangVersion>
 		<OutputType>Library</OutputType>
 		<Authors>Göran Bäcklund</Authors>
 		<Company>Backlundtransform</Company>
